fix: dark mode

--- a/landing-page/css/responsive.css
+++ b/landing-page/css/responsive.css
@@ -7,13 +7,14 @@ body.dark-mode {
   --color-text-main: #ffffff;
   --color-text-dark: #dbe5ff;
   --color-text-muted: #cccccc;
+  --color-text: #3f77f1;
   --color-white: #222222;
   --color-black: #ffffff;
   --color-primary: #8aa8ff;
   --color-primary-dark: #6d91ee;
   --color-bg-input: #2a2a2a;
   --color-footer: #050b1f;
-
+  --color-footer: #597df4;
   background: var(--color-bg-body);
   color: var(--color-text-main);
 }
